# chainweb-node

./: .dockerignore  .envrc.recommended  .gitattributes  .gitignore  .gitlab-ci.yml  .hlint.yaml  .pact-history  .pc-history  .travis.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  FAILING_TESTS  HelloKadena.md  LICENSE  README.md  Setup.hs  TAGS  blake2s.patch  build-docker.sh  cabal.config  cabal.project  cabal.project.freeze  cabal.project.freeze901  chainweb.cabal  chainweb.cabal.bkp  classify-diffs  complete-config.yaml  default-flake.nix  default.nix  docker.nix  flake.nix  foo.json  foo.yaml  future-work.md  ghc8104.nix  ghc901.nix  ghcid  hie.yaml  hlint.hs  (+29 more)
.claude-flow/metrics/: system-metrics.json
.trunk/: trunk.yaml
alerts/: consensus-alerts.yaml  performance-alerts.yaml  resource-alerts.yaml
allocations/: Mainnet-Keysets.csv  Testnet-Keysets.csv  token_payments.csv
bench/: Bench.hs  JSONEncoding.hs
c/: rlim_utils.c  rlim_utils.h  shathree.c
chainweb-beacon/: README.md  chainweb-beacon.cabal
changes/: .gitignore  2024-05-30T133934-0500.txt  2024-05-30T141430-0500.txt  2024-05-30T141646-0500.txt  2024-05-30T143223-0500.txt  2024-05-30T143733-0500.txt  2024-05-30T144824-0400.txt  2024-05-30T144952-0400.txt  2024-05-30T145052-0400.txt  2024-05-30T145526-0500.txt  2024-05-30T145604-0400.txt  2024-05-30T145629-0400.txt  2024-05-30T145702-0400.txt  2024-05-30T145746-0400.txt  2024-05-30T145807-0400.txt  2024-05-30T145831-0400.txt  2024-05-30T145855-0400.txt  2024-05-30T145921-0400.txt  2024-05-30T150001-0400.txt  2024-05-30T150038-0400.txt  2024-05-30T150129-0400.txt  2024-05-30T163404-0400.txt  2024-06-11T102857-0500.txt  2024-06-11T104051-0500.txt  2024-06-14T103642-0500.txt  2024-06-19T182508-0400.txt  2024-06-19T182544-0400.txt  2024-06-19T182611-0400.txt  2024-06-19T182645-0400.txt  2024-06-19T182722-0400.txt
compact/: Main.hs
config/: defaultMainnetNode.yaml  defaultTestnetNode.yaml  miningCoordinationMainnet.yaml
cwtool/: CwTool.hs
cwtools/: README.md  cwtools.cabal
cwtools/calculate-release/: Main.hs
cwtools/compact/: Main.hs
cwtools/db-checksum/: Main.hs
cwtools/ea/: Ea.hs
cwtools/ea/Ea/: Genesis.hs
cwtools/encode-decode/: Main.hs
cwtools/evm-genesis/: Main.hs
cwtools/genconf/: Main.hs
cwtools/header-dump/: Main.hs
cwtools/known-graphs/: Main.hs
cwtools/pact-replay/: PactReplay.hs
cwtools/run-nodes/: Main.hs
cwtools/standalone-pruner/: Main.hs
cwtools/txstream/: Main.hs
dashboards/: blockchain-operations.json  network-health.json  node-overview.json  system-resources.json  transaction-analytics.json
deepwiki/: README.md  glossary.md  overview.md
docs/: Architecture.md  BlockChainData.hs  ChainDbApi.md  ChainDbSyncApi.md  CheckpointerSchema.md  CoinContractUpgrades.md  NodeArchitecture.md  P2p.hs  P2pNetworkApi.md  PactBackendBenchmarks.md  RecoveringFromDeepForks.md  Transport.md  database-metrics.md  merklelog-example.md  operator-guide.md
example/: IntChainDb.hs  TrivialSync.hs
examples/: BlockHeaderChainDb.hs  InProcessP2p.hs  P2pExample.hs  SingleChainExample.hs  SingleChainNode.hs  TransactionGenerator.hs  TrivialSync.hs  transaction-generator-deploy-contracts-template.yaml  transaction-generator-help.md  transaction-generator-listen-on-transaction-template.yaml  transaction-generator-send-simple-transactions-template.yaml  transaction-generator-send-standard-transactions-template.yaml  transaction-generator-send-transactions-template.yaml  transaction-generator.md
exe/: CwTool.hs
experiment/: prepareheaders
libs/chainweb-storage/: LICENSE  cabal.project  chainweb-storage.cabal
libs/chainweb-storage/.github/workflows/: build.yml
libs/chainweb-storage/cpp/: chainweb-rocksdb.h
libs/chainweb-storage/src/Chainweb/Storage/: DedupStore.hs  Table.hs
libs/chainweb-storage/src/Chainweb/Storage/Table/: HashMap.hs  Map.hs  RocksDB.hs
libs/chainweb-storage/src/Data/: CAS.hs
libs/chainweb-storage/src/Data/CAS/: Forgetful.hs  RocksDB.hs
libs/chainweb-storage/src/Data/CAS/RocksDB/: Iterator.hs
libs/chainweb-storage/test/: Main.hs
libs/sp1-verifier-hs/: Cargo.toml  LICENSE  Makefile  sp1-verifier-hs.cabal
libs/sp1-verifier-hs/src/: lib.rs
libs/sp1-verifier-hs/src-hs/PlonkBn254/: VMKeys.hs  Verify.hs
libs/sp1-verifier-hs/src-hs/PlonkBn254/Utils/: EmbedVMKeys.hs
libs/sp1-verifier-hs/test/: Main.hs
mempool-consensus-test/: 000004.sst  000007.sst  000010.sst  000013.sst  000019.sst  000025.sst  000031.sst  000037.sst  000043.sst  000049.sst  IDENTITY  LOG  LOG.old.1557167445940547  LOG.old.1557171703792015  LOG.old.1557171920926910  LOG.old.1557171985634048  LOG.old.1557172294356730  LOG.old.1557173366345767  LOG.old.1557173632105113  LOG.old.1557174138685053  LOG.old.1557174225432403  LOG.old.1557174846692301  MANIFEST-000050  OPTIONS-000047
miner/: Miner.hs  README.org
nix/: check_cabal_project.sh
node/: ChainwebNode.hs  Main.hs  Setup.hs  chainweb-node.cabal
node/Chainweb/Node/: SingleChainMiner.hs
node/Utils/: CheckRLimits.chs  CheckRLimits.hs  CheckRLimits.hsc  Gexf.hs  InstallSignalHandlers.hs  Logging.hs
node/Utils/Logging/: Config.hs  Handle.hs
node/c/: rlim_utils.c  rlim_utils.dump-timings
node/src/: ChainwebNode.hs
pact/: lottery.pact
pact-diff/: Main.hs
patches/: stm-throwto.patch
replay/: Main.hs
rewards/: leadgen.xlsx  mainnet_allocations.csv  mainnet_coinbase.csv  mainnet_keys.csv  mainnet_keysets.csv  miner_rewards.csv  pack list.xlsx
rosetta/: README.md
scripts/: RunNodes.hs  collectArtifacts.sh  deploy-and-send.sh  run-nodes.sh  test-bootstrap-node.config  testnetwork.sh
src/: ChainwebNode.hs  Script.hs  foo.txt
src/Data/: CAS.hs  (+8 more)
test/: ChainwebTests.hs  ChainwebToolsTests.hs  ConsensusNetworkTests.hs  MultiNodeNetworkTests.hs  PactTests.hs  RemoteTests.hs  SlowTests.hs
tools/: ChainDb2Gexf.hs
tools/chain2gexf/: Chain2Gexf.hs  Gexf.hs  chain2gexf.cabal
tools/ea/: Allocations.hs  Ea.hs  ea.cabal
tools/ea/Ea/: Genesis.hs
tools/genesis-payload/: GenPayload.hs  genesis-payload.cabal
tools/mine-genesis/: MineGenesis.hs  mine-genesis.cabal
(+1222 files in other folders)
